created basic views and corresponding viewModels

--- a/WPFWhatToDo/WPFWhatToDo.csproj
+++ b/WPFWhatToDo/WPFWhatToDo.csproj
@@ -8,4 +8,17 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WPFWhatToDo.Core\WPFWhatToDo.Core.csproj" />
+  </ItemGroup>
+
 </Project>
